--- a/Making.css
+++ b/Making.css
@@ -11,7 +11,6 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    font-size: 1.5rem;
     padding-bottom : 20px;
 }
 
@@ -32,7 +31,6 @@ a:active {
 }
 
 #title {
-    font-size: 2rem;
     text-align: left;
     box-sizing: border-box;
     padding-bottom: 5px;
@@ -64,10 +62,18 @@ ul {
 }
 
 /* 화면 너비 0 ~ 2560px */
-@media (max-width:2560px) {
+@media (max-width:2570px) {
     .main {
         display: flex;
         padding-top:100px;
+    }
+
+    #header_container {
+        font-size: 1.5rem;
+    }
+
+    #title {
+        font-size: 2rem;
     }
 
     p {
@@ -81,7 +87,7 @@ ul {
     .voca_container input {
         font-size:25px;
         margin-bottom : 30px;
-        height: 2.5em;
+        height: 2em;
     }
 
     .voca_field input {
@@ -127,6 +133,14 @@ ul {
         padding-top:50px;
     }
 
+    #header_container {
+        font-size: 1.5rem;
+    }
+
+    #title {
+        font-size: 2rem;
+    }
+
     p {
         font-size : 25px;
     }
@@ -138,15 +152,15 @@ ul {
     .voca_container input {
         font-size:25px;
         margin-bottom : 30px;
-        height: 2.5em;
+        height: 2em;
     }
 
     .voca_field input {
-        width : 430px;
+        width : 400px;
     }
 
     .mean_field input {
-        width : 730px;
+        width : 700px;
     }
 
     #save_btn {
@@ -158,7 +172,7 @@ ul {
 
     .addMinus{
         bottom: 45px;
-        left: 600px;
+        left: 560px;
     }
 
     .add {
@@ -183,83 +197,98 @@ ul {
         padding-top:50px;
     }
 
+    #header_container {
+        font-size: 1rem;
+    }
+
+    #title {
+        font-size: 1.5rem;
+    }
+
     p {
-        font-size : 30px;
+        font-size : 20px;
     }
 
     span {
-        font-size : 20px;
+        font-size : 18px;
     }
 
     .voca_container input {
         font-size:25px;
         margin-bottom : 30px;
-        height: 2.5em;
+        height: 2em;
     }
 
     .voca_field input {
-        width : 300px;
+        width : 230px;
     }
 
     .mean_field input {
-        width : 500px;
+        width : 400px;
     }
 
     #save_btn {
         bottom : 30px;
-        width: 250px;
-        height: 60px;
-        font-size: 25px;
+        width: 160px;
+        height: 45px;
+        font-size: 20px;
     }
 
     .addMinus{
-        bottom: 45px;
-        left: 400px;
+        bottom: 43px;
+        left: 330px;
     }
 
     .add {
-        font-size:25px;
-        width:30px;
-	    height:30px;
-        line-height:30px;
+        font-size:20px;
+        width:25px;
+	    height:25px;
+        line-height:25px;
     }
 
     .minus {
-        font-size:25px;
-        width:30px;
-	    height:30px;
-        line-height:30px;
+        font-size:20px;
+        width:25px;
+	    height:25px;
+        line-height:25px;
     }
 }
 
 /* 화면 너비 0 ~ 768px */
-@media (max-width : 768px) { 
+@media (max-width : 780px) { 
     .main {
         display: flex;
         padding-top:50px;
     }
 
+    #header_container {
+        font-size: 1rem;
+    }
+
+    #title {
+        font-size: 1.3rem;
+    }
+
     p {
-        font-size : 15px;
+        font-size : 18px;
     }
 
     span {
-        padding-right:3px;
-        font-size : 5px;
+        font-size : 15px;
     }
 
     .voca_container input {
         font-size:20px;
         margin-bottom : 30px;
-        height: 1.5em;
+        height: 2em;
     }
 
     .voca_field input {
-        width : 200px;
+        width : 140px;
     }
 
     .mean_field input {
-        width : 300px;
+        width : 220px;
     }
 
     #save_btn {
@@ -271,7 +300,7 @@ ul {
 
     .addMinus{
         bottom: 40px;
-        left: 260px;
+        left: 200px;
     }
 
     .add {
@@ -311,7 +340,7 @@ span {
 }
 
 #save_btn {
-    margin-top:30px;
+    margin-top:20px;
     position:relative;
     background-color: #fcd121;
     color: rgb(255, 255, 255);
