--- a/Test.css
+++ b/Test.css
@@ -30,12 +30,18 @@ header {
     align-items: center;
 }
 
+#main {
+    margin: 0px auto;
+    width: 100%;
+  }
+
 #logo {
     margin: 0 auto;
     margin-left: 190px;
     height: 44px;
     width: 159px;
-    background-image: url("image/logo.png");
+    background-image: url("image/logo_small.png");
+    background-repeat: no-repeat;
 }
 
 ul {
@@ -81,7 +87,7 @@ li:active {
 }
 
 /* 화면 너비 0 ~ 2560px */
-@media (max-width:2560px) {
+@media (max-width:2570px) {
     .main_container {
         margin-top: 25vh;
     }
@@ -134,7 +140,7 @@ li:active {
         margin-top: 20vh;
     }
     #main {
-        width: 900px;
+        width: 800px;
         height: 500px;
     }
 
@@ -148,7 +154,7 @@ li:active {
     }
 
     .line {
-        width: 880px;
+        width: 750px;
     }
 
     .text-answer {
@@ -158,7 +164,7 @@ li:active {
     }
 
     .answer {
-        width: 400px;
+        width: 350px;
         height: 100px;
         margin: 0 10px 10px 10px;
     }
@@ -223,7 +229,7 @@ li:active {
 }
 
 /* 화면 너비 0 ~ 768px */
-@media (max-width:768px) {
+@media (max-width:780px) {
     .main_container {
         margin-top: 20vh;
     }
@@ -269,7 +275,7 @@ li:active {
 }
 
 /* 화면 너비 0 ~ 480px */
-@media (max-width : 480px) {
+@media (max-width : 490px) {
     
     #main {
         width: 300px;
