--- a/timer.css
+++ b/timer.css
@@ -18,33 +18,53 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-.main {
-    width: 40%;
-    height: 100%;
-    margin: 0 auto;
-    padding-top: 300px;
+  body{
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+ }
+ .box{
+    margin-top: 150px;
+    width: 500px;
+    height: 500px;
 }
-.main h1 {
-    width: 100%;
-    font-size: 100px;
+a { 
+    text-decoration:none;
+    color: white;
+} 
+select {
+    margin-top: 25px;
+    font-size: 15px;
+    width: 150px; /* 원하는 너비설정 */
+    height: 40px;
+    padding: .8em .5em; /* 여백으로 높이 설정 */
+    border-radius: 0px; /* iOS 둥근모서리 제거 */
+    -webkit-appearance: none; /* 네이티브 외형 감추기 */
+    -moz-appearance: none;
+    appearance: none;
+}
+.timerBox{
+    width: 500px;
+    bottom: 2px solid black;
+}
+.timerBox .time{
+    font-size: 100pt;
     color: white;
     text-align: center;
-    word-spacing: -10px;
-    padding-bottom: 10px;
+    font-family: sans-serif;
+
 }
-.main p {
-    width: 100%;
-    font-size: 25px;
-    color: white;
+.btnBox{
+    margin: 20px auto;
     text-align: center;
-    margin-top: 20px;
 }
-.main img {
-    width: 40px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-20px);
-    margin-top: 20px;
+.btnBox .fa{
+    margin: 0px 5px;
+    font-size: 20pt;
+    color: #FAED7D;
+    cursor: pointer;
 }
 
 /* 화면 너비 0 ~ 1200px */
