--- a/Making.css
+++ b/Making.css
@@ -1,233 +1,386 @@
-body {
-    margin : 0;
+* {
+    box-sizing: border-box;
+    margin: 0 auto;
 }
 
-#header-warpper {
+/* header */
+#header_container {
     width: 100%;
-    height: 15vh;
-    background-color:#fcd121;
+    height: 20vh;
+    background-color: #fcd121;
     display: flex;
-    justify-content:space-around;
-    align-items:flex-end;
-    padding-bottom:20px;
-    font-size: 20px;
-   
+    justify-content: space-around;
+    align-items: flex-end;
+    padding-bottom : 20px;
 }
 
 a {
-    color : rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 a:hover {
     text-decoration: underline;
-    cursor:pointer;
-    color:rgb(255, 255, 255);
+    cursor: pointer;
+    color: rgb(255, 255, 255);
 }
 
 a:active {
     text-decoration: none;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+}
+
+#title {
+    text-align: left;
+    box-sizing: border-box;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    color: rgb(255, 255, 255);
+    margin: 5px 0;
+    background-color: #fcd121;
+    border: none;
+    border-bottom: solid 1px rgb(255, 255, 255);
+    outline-style: none;
+
+}
+
+#title::placeholder {
+    color: rgb(255, 255, 255);
+}
+
+/* section */
+.main_container {
+    text-align: center;
+}
+
+.voca_container {
+    display: inline-flex;
 }
 
 ul {
     list-style: none;
 }
 
-#title {
-    font-size:30px;
-    text-align: left;
-    box-sizing: border-box;
-    padding-bottom : 5px;
-    padding-left:5px;
-    margin: 5px 0;
-    background-color: #fcd121;
-    color:rgb(255, 255, 255);
-    border : none; 
-    border-bottom : solid 1px rgb(255, 255, 255);
-    outline-style: none;
-}
-
-
-input::-webkit-input-placeholder {
-    color:rgb(255, 255, 255);
-}
-
-#main_container {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-.voca {
-    margin-top : 50px;
-}
-
-
-@media (min-width:1024px){
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right : 350px;
-        margin-bottom: 5px;
-    }
-    
-    .voca_making input:nth-child(1) {
-        width: 350px;
-    }
-    
-    .voca_making input:nth-child(2) {
-        width: 500px;
+/* 화면 너비 0 ~ 2560px */
+@media (max-width:2570px) {
+    .main {
+        display: flex;
+        padding-top:100px;
     }
 
-    .making-test {
-        position: relative;
-        left : 850px;
-        bottom : 40px;
-        color:#8f8f8f;
-    }
-} 
-
-@media (max-width:1023px) and (min-width:768px){
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right :250px;
-        margin-bottom: 5px;
+    #header_container {
+        font-size: 1.5rem;
     }
 
-    .voca_making input:nth-child(1) {
-        width: 250px;
-    }
-    
-    .voca_making input:nth-child(2) {
-        width: 350px;
+    #title {
+        font-size: 2rem;
     }
 
-    .making-test {
-        position: relative;
-        left : 600px;
-        bottom : 40px;
-        color:#8f8f8f;
-    }
-}
-
-@media (max-width : 767px) and (min-width:480px){
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right : 150px;
-    }
-    
-    .voca_making input:nth-child(1) {
-        width: 150px;
-    }
-    
-    .voca_making input:nth-child(2) {
-        width: 200px;
+    p {
+        font-size : 30px;
     }
 
-    .making-test {
-        position: relative;
-        left : 400px;
-        bottom : 40px;
-        color:#8f8f8f;
-    }
-} 
-
-@media (max-width:479px){
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right : 150px;
+    span {
+        font-size : 20px;
     }
 
-    .voca_making input:nth-child(1) {
-        width: 150px;
-    }
-    
-    .voca_making input:nth-child(2) {
-        width: 200px;
+    .voca_container input {
+        font-size:25px;
+        margin-bottom : 30px;
+        height: 2em;
     }
 
-    .making-test {
-        position: relative;
-        left : 850px;
+    .voca_field input {
+        width : 600px;
+    }
+
+    .mean_field input {
+        width : 39em;
+    }
+
+    #save_btn {
         bottom : 30px;
-        color:#8f8f8f;
+        width: 250px;
+        height: 60px;
+        font-size: 25px;
     }
-}  
 
-.text_field {
-    display: flex;
-    font-weight:bold;
-    font-size:20px;
-    align-items: flex-end;
-    margin-top:0px;
-    margin-bottom:5px;
+    .addMinus{
+        bottom: 50px;
+        left: 780px;
+    }
+
+    .add {
+        font-size:30px;
+        width:45px;
+	    height:45px;
+        line-height:45px;
+    }
+
+    .minus {
+        font-size:30px;
+	    width:45px;
+	    height:45px;
+        line-height:45px;
+    }
+
 }
 
-.voca_making {
-    font-weight: normal;
-    color:#8f8f8f;
-    box-sizing: border-box;
+/* 화면 너비 0 ~ 2000px */
+@media (max-width:2000px) {
+    .main {
+        display: flex;
+        padding-top:50px;
+    }
+
+    #header_container {
+        font-size: 1.5rem;
+    }
+
+    #title {
+        font-size: 2rem;
+    }
+
+    p {
+        font-size : 25px;
+    }
+
+    span {
+        font-size : 20px;
+    }
+
+    .voca_container input {
+        font-size:25px;
+        margin-bottom : 30px;
+        height: 2em;
+    }
+
+    .voca_field input {
+        width : 400px;
+    }
+
+    .mean_field input {
+        width : 700px;
+    }
+
+    #save_btn {
+        bottom : 50px;
+        width: 180px;
+        height: 50px;
+        font-size: 20px;
+    }
+
+    .addMinus{
+        bottom: 45px;
+        left: 560px;
+    }
+
+    .add {
+        font-size:25px;
+        width:30px;
+	    height:30px;
+        line-height:30px;
+    }
+
+    .minus {
+        font-size:25px;
+        width:30px;
+	    height:30px;
+        line-height:30px;
+    }
 }
 
-.voca_making input {
-    font-size:20px;
-    margin-left: 5px;
-    margin-right : 5px;
+/* 화면 너비 0 ~ 1200px */
+@media (max-width:1220px) {
+    .main {
+        display: flex;
+        padding-top:50px;
+    }
+
+    #header_container {
+        font-size: 1rem;
+    }
+
+    #title {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size : 20px;
+    }
+
+    span {
+        font-size : 18px;
+    }
+
+    .voca_container input {
+        font-size:25px;
+        margin-bottom : 30px;
+        height: 2em;
+    }
+
+    .voca_field input {
+        width : 230px;
+    }
+
+    .mean_field input {
+        width : 400px;
+    }
+
+    #save_btn {
+        bottom : 30px;
+        width: 160px;
+        height: 45px;
+        font-size: 20px;
+    }
+
+    .addMinus{
+        bottom: 43px;
+        left: 330px;
+    }
+
+    .add {
+        font-size:20px;
+        width:25px;
+	    height:25px;
+        line-height:25px;
+    }
+
+    .minus {
+        font-size:20px;
+        width:25px;
+	    height:25px;
+        line-height:25px;
+    }
+}
+
+/* 화면 너비 0 ~ 768px */
+@media (max-width : 780px) { 
+    .main {
+        display: flex;
+        padding-top:50px;
+    }
+
+    #header_container {
+        font-size: 1rem;
+    }
+
+    #title {
+        font-size: 1.3rem;
+    }
+
+    p {
+        font-size : 18px;
+    }
+
+    span {
+        font-size : 15px;
+    }
+
+    .voca_container input {
+        font-size:20px;
+        margin-bottom : 30px;
+        height: 2em;
+    }
+
+    .voca_field input {
+        width : 140px;
+    }
+
+    .mean_field input {
+        width : 220px;
+    }
+
+    #save_btn {
+        bottom : 30px;
+        width: 130px;
+        height: 40px;
+        font-size: 15px;
+    }
+
+    .addMinus{
+        bottom: 40px;
+        left: 200px;
+    }
+
+    .add {
+        font-size:15px;
+        width:20px;
+	    height:20px;
+        line-height:20px;
+    }
+
+    .minus {
+        font-size:15px;
+        width:20px;
+	    height:20px;
+        line-height:20px;
+    }
+}
+
+p {
     margin-bottom : 15px;
-    box-sizing: border-box;
-    padding : 5px 0 5px 0;
 }
 
-.voca_making li {
-    margin-bottom : 15px;
+span {
+    padding-right : 5px;
 }
 
-.voca_making li input:nth-child(1) {
-    margin-right : 20px;
+.voca_field p {
+    text-align: left;
+}
+
+.mean_field p {
+    text-align: left;
 }
 
 .btn {
     display: flex;
-    align-items: flex-start;
     justify-content: center;
 }
 
 #save_btn {
+    margin-top:20px;
+    position:relative;
     background-color: #fcd121;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-align: center;
-    width: 140px;
     border-style: none;
-    outline-style:none ;
+    outline-style: none;
     border-radius: 10px;
-    font-size: 18px;
-    height: 40px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.making-test {
-    font-size: 20px;
-    display: flex;
-    text-align: center;
-    line-height: 20px;
+.addMinus {
+    position: relative;
+    display: inline-flex;
 }
 
 .add {
-    border : 1px solid #8f8f8f;
-    border-radius: 100%;
-    width:20px;
-    height:20px;
-    margin-right: 5px;
+    display:inline-block;
+    text-decoration:none;
+    color:#8f8f8f;
+    text-align: center;
+    margin-right:5px;
+    border-radius:100px;
+    border: 1px solid #8f8f8f;
+    outline-style: none;
+    vertical-align:middle;
     background-color: rgb(255, 255, 255);
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .minus {
-    border : 1px solid #8f8f8f;
-    border-radius: 100%;
-    width:20px;
-    height:20px;
-    margin-left: 5px;
+    display:inline-block;
+    text-decoration:none;
+    color:#8f8f8f;
+    text-align: center;
+    margin-left:5px;
+    border-radius:100px;
+    border: 1px solid #8f8f8f;
+    outline-style: none;
+    vertical-align:middle;
     background-color: rgb(255, 255, 255);
-    cursor:pointer;
+    cursor: pointer;
 }
+
