--- a/MyPage.css
+++ b/MyPage.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
 * {
     margin: 0 auto;
 }
 
+body {
+    height: 100vh;
+    overflow-x: hidden;
+}
 .container {
     display: block;
 }
@@ -50,12 +56,7 @@ header ul {
     box-sizing: border-box;
 }
 
-a:link {
-    color: #2E2E2E;
-    text-decoration: none;
-}
-
-a:visited {
+a {
     color: #2E2E2E;
     text-decoration: none;
 }
@@ -73,9 +74,10 @@ header li:active {
 #main{
     background-color: #fff8db;
     border-radius: 40px;
-    height: 100%;
+    height: 85vh;
     min-height: 740px;
     margin: 150px 70px;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 /* main_left */
 .main_left {
@@ -108,8 +110,8 @@ header li:active {
     margin-right: 80px;
     border-right: 1px solid gray;
     position: absolute;
-        left: 50%;
-        transform: translateX(-20px);
+    left: 50%;
+    transform: translateX(-20px);
 }
 
 /* main_right */
@@ -117,7 +119,7 @@ header li:active {
     float: left;
     margin-top: 100px;
     position: absolute;
-        left: 55%;
+    left: 55%;
 }
 .main_right input {
     height: 30px;
@@ -142,44 +144,81 @@ input[type="button"] {
 }
 #save {
     background-color: #0f0071;
+    cursor: pointer;
 }
 #myword, #mystudy {
     width: 100%;
     margin: 5px 0;
+    cursor: pointer;
 }
 
 /* footer */
 footer {
     width: 100%;
-    height: 100px;
-    margin-top: 100px;
     background-color: #363636;
     align-items: center;
-}
-footer img {
+    clear: both;
+    height: 100px;
+  }
+  footer img {
     margin-top: 35px;
     margin-left: 50px;
-}
-footer p {
+  }
+  footer p {
     color: white;
     float: right;
     margin-top: 35px;
     margin-right: 50px;
-}
-body {
-    overflow-x: hidden;
-}
+  }
 
-/* 화면 너비 0 ~ 1060px */
-@media (max-width: 1190px) {
-    #main_middle {
-        display: none;
-    }
+@media(min-width: 2000px){
     .main_left {
-        margin-left: 0px;
+        transform: translateX(-800px);
+    }
+    .profile {
+        width: 550px;
+        height: 550px;
+        margin-top: 150px;
+    }
+    #main_middle {
+        height: 1000px;
+    }
+    .main_right {
+        margin-top: 150px;
+        font-size: 27px;
+    }
+    .main_right input {
+        height: 40px;
+    }
+    .main_right select {
+        height: 40px;
+    }
+    input[type="button"] {
+        height: 50px;
+        font-size: 27px;
+        margin-bottom: 20px;
+    }
+    #myword, #mystudy {
+        margin: 10px 0;
+    }
+    footer {
+        height: 130px;
+        font-size: 25px;
+    }
+    footer img {
+        margin-top: 45px;
+    }
+    footer p {
+        margin-top: 45px;
+    }
+    
+}
+@media (max-width: 1220px) {
+    .highlight {
+        font-size: 14px;
     }
 }
-@media (max-width: 1058px) {
+@media (max-width: 1120px) {
     #main_middle {
         display: none;
     }
@@ -205,9 +244,6 @@ body {
     }
     #main_middle {
         display: none;
-    }
-    header {
-        height: 133px;
     }
 }
 /* 화면 너비 0 ~ 480px */
