--- a/Test.css
+++ b/Test.css
@@ -1,186 +1,332 @@
-body {
-    margin : 0;
+* {
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-bottom: 0px;
     text-align: center;
 }
 
-section {
+html, body {
+    width:100%;
+    height:100%;
+}
+
+nav {
+    max-width: 1200px;
+}
+
+header {
+    position: fixed;
+    box-shadow: 2px 2px 50px -30px gray;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    padding: 1rem;
+    color: white;
+    background: white;
+    font-weight: bold;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
 }
 
-.main_container {   
-    display: flex;
-    justify-content: space-between; 
+#main {
+    margin: 0px auto;
+    width: 100%;
+  }
+
+#logo {
+    margin: 0 auto;
+    margin-left: 190px;
+    height: 44px;
+    width: 159px;
+    background-image: url("image/logo_small.png");
+    background-repeat: no-repeat;
 }
 
-@media (min-width:1024px) {
+ul {
+    margin-right: 100px;
+}
+
+.main_container {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;    
+    margin-bottom:auto;
+}
+
+li {
+    list-style: none;
+    margin: auto;
+    float: right;
+    text-align: center;
+    margin-right: 27px;
+    margin-left: 27px;
+    font-size: 20px;
+}
+
+a:link {
+    color: #2E2E2E;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #2E2E2E;
+    text-decoration: none;
+}
+
+li:hover {
+    color: #000000;
+    text-decoration: none;
+    box-shadow: inset 0 -10px 0 #fcd121;
+}
+
+li:active {
+    color: #000000;
+    text-decoration: none;
+}
+
+/* 화면 너비 0 ~ 2560px */
+@media (max-width:2570px) {
+    .main_container {
+        margin-top: 25vh;
+    }
     #main {
-        width : 1000px;
-        height : 600px;
+        width: 1400px;
+        height: 800px;
     }
 
     .page-number {
-        font-size : 30px;
+        font-size: 40px;
+    }
+
+    .text {
+        font-size: 80px;
+        margin: 100px 0 110px 0;
+    }
+
+    .line {
+        width: 1350px;
+    }
+
+    .text-answer {
+        margin-top: 25px;
+        line-height: 150px;
+        font-size: 40px;
+    }
+
+    .answer {
+        width: 650px;
+        height: 150px;
+        margin: 0 10px 40px 10px;
+    }
+
+    .answer:hover {
+        border: 10px solid #fcd121;
+        line-height: 130px;
+    }
+
+    img {
+        margin-left: 20px;
+        margin-right: 20px;
+        width: 100px;
+        height: 100px;
+    }
+}
+
+/* 화면 너비 0 ~ 2000px */
+@media (max-width:2000px) {
+    .main_container {
+        margin-top: 20vh;
+    }
+    #main {
+        width: 800px;
+        height: 500px;
+    }
+
+    .page-number {
+        font-size: 25px;
+    }
+
+    .text {
+        font-size: 65px;
+        margin: 45px 0 70px 0;
+    }
+
+    .line {
+        width: 750px;
+    }
+
+    .text-answer {
+        margin-top: 15px;
+        line-height: 100px;
+        font-size: 35px;
+    }
+
+    .answer {
+        width: 350px;
+        height: 100px;
+        margin: 0 10px 10px 10px;
+    }
+
+    .answer:hover {
+        border: 5px solid #fcd121;
+        line-height: 90px;
+    }
+
+    img {
+        margin-left: 20px;
+        margin-right: 20px;
+        width: 60px;
+        height: 60px;
+    }
+}
+
+/* 화면 너비 0 ~ 1200px */
+@media (max-width:1220px) {
+    .main_container {
+        margin-top: 20vh;
+    }
+    #main {
+        width: 800px;
+        height: 530px;
+    }
+
+    .page-number {
+        font-size: 30px;
     }
 
     .text {
         font-size: 60px;
-        margin : 90px 0 100px 0;
+        margin: 60px 0 70px 0;
     }
 
     .line {
-            width: 980px;
+        width: 780px;
     }
 
-    .text-answer{
-        line-height:100px;
+    .text-answer {
+        margin-top:30px;
+        line-height: 90px;
         font-size: 30px;
     }
 
     .answer {
-        width: 450px;
-        height: 100px;
-        margin : 0 10px 20px 10px;
+        width: 350px;
+        height: 90px;
+        margin: 0 10px 20px 10px;
     }
 
     .answer:hover {
-        line-height: 90px;
+        border: 5px solid #fcd121;
+        line-height: 80px;
     }
 
     img {
-        width: 60px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
     }
-} 
+}
 
-@media (max-width:1024px) and (min-width:767px){
+/* 화면 너비 0 ~ 768px */
+@media (max-width:780px) {
+    .main_container {
+        margin-top: 20vh;
+    }
+
     #main {
-        width : 800px;
-        height : 600px;
+        width: 600px;
+        height: 420px;
     }
 
     .page-number {
-        font-size : 25px;
+        font-size: 20px;
     }
 
     .text {
-        font-size: 50px;
-        margin : 90px 0 100px 0;
+        font-size: 40px;
+        margin: 30px 0 55px 0;
     }
 
     .line {
-         width : 750px;
+        width: 580px;
     }
 
-    .text-answer{
-        line-height:100px;
-        font-size: 30px;
+    .text-answer {
+        line-height: 80px;
+        font-size: 25px;
     }
 
     .answer {
-        width: 340px;
-        height: 100px;
-        margin : 0 10px 20px 10px;
+        width: 240px;
+        height: 80px;
+        margin: 0 10px 20px 10px;
     }
 
     .answer:hover {
-        line-height: 90px;
+        border: 5px solid #fcd121;
+        line-height: 70px;
+    }
+
+    img {
+        width: 55px;
+        height: 55px;
+    }
+}
+
+/* 화면 너비 0 ~ 480px */
+@media (max-width : 490px) {
+    
+    #main {
+        width: 300px;
+        height: 300px;
+    }
+
+    .page-number {
+        font-size: 20px;
+    }
+
+    .text {
+        margin: 25px 0 40px 0;
+        font-size: 30px;
+    }
+
+    .text-answer {
+        margin-top:10px;
+        line-height: 50px;
+        font-size: 16px;
+    }
+
+    .answer {
+        width: 130px;
+        height: 50px;
+        margin-bottom: 15px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    .answer:hover {
+        border: 5px solid #fcd121;
+        line-height: 40px;
+    }
+
+    .line {
+        width: 280px;
+    }
+
+    .previous {
+        left: 5px;
+    }
+
+    .next {
+        right: 5px;
     }
 
     img {
         width: 50px;
-        height: 45px;
+        height: 50px;
     }
 }
-
-@media (max-width : 767px) and (min-width:480px){
-    #main {
-        width : 500px;
-        height : 350px;
-    }
-
-    .page-number {
-        font-size : 20px;
-    }
-
-    .text {
-        margin : 40px 0 45px 0;
-        font-size: 30px;
-    }
-
-    .text-answer{
-        line-height:50px;
-        font-size: 20px;
-    }
-
-    .answer {
-        width: 210px;
-        height: 50px;
-        margin-bottom: 15px;
-        margin-left:5px;
-        margin-right: 5px;
-    }
-
-    .answer:hover {
-        line-height: 40px;
-    }
-
-    .line {
-        width : 450px;
-    }
-
-    img {
-        width: 45px;
-        height: 40px;
-    }
-} 
-
-@media (max-width:480px) and (min-width:320px) {
-    #main {
-        width:250px;
-        height:300px;
-    }
-
-    .line {
-        width : 230px;
-        margin-bottom : 0;
-    }
-
-    .page-number {
-        font-size : 20px;
-    }
-
-    .text {
-        margin : 30px 0 30px 0;
-        font-size: 30px;
-    }
-
-    .text-answer{
-        line-height:50px;
-        font-size: 20px;
-    }
-
-    .answer {
-        width: 100px;
-        height: 50px;
-        margin-left:5px;
-        margin-right: 5px;
-        margin-bottom: 10px;
-    }
-    
-    .answer:hover {
-        line-height: 40px;
-    }
-
-    img {
-        width: 45px;
-        height: 40px;
-    }
-}  
-
 
 #main {
     background-color: #ffeb9a;
@@ -188,11 +334,14 @@ section {
 }
 
 .line {
-    border-top: 1.5px solid #8f8f8f;
-    margin: auto;   
+    background-color:#8f8f8f;
+    height: 1px;
+    margin: auto;
+
 }
 
-.btn_wrap { 
+.btn_wrap {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -204,27 +353,23 @@ img {
 }
 
 .page-number {
-    margin-top : 20px;
-    font-weight:normal;
-    color:#8f8f8f;
+    margin-top: 20px;
+    font-weight: normal;
+    color: #8f8f8f;
 }
 
 .text-answer {
-    color:#8f8f8f;
+    color: #8f8f8f;
 }
 
 .answer {
     box-sizing: border-box;
     display: inline-flex;
     justify-content: center;
-    background-color:#fff7d5;
+    background-color: #fff7d5;
 }
 
-.item1 {
-    margin-top:25px;
-}
 
 .answer:hover {
-    border: 5px solid #fcd121;
-    cursor:pointer;
+    cursor: pointer;
 }
