--- a/Memorize.css
+++ b/Memorize.css
@@ -32,7 +32,7 @@ header {
     margin: 0 auto;
     margin-left: 190px;
     height: 44px;
-    width: 110px;
+    width: 133px;
     box-sizing: border-box;
 }
 
@@ -245,6 +245,11 @@ footer p {
     }
 }
 
+@media (max-width: 1220px){
+    .highlight {
+        font-size: 14px;
+    }
+}
 @media (max-width: 770px){
     header {
         height: 135px;
@@ -254,6 +259,9 @@ footer p {
     }
     * {
         max-width: 750px;
+    }
+    .highlight {
+        font-size: 14px;
     }
 }
 @media (max-width: 480px) {
@@ -265,5 +273,8 @@ footer p {
     }
     #logo img {
         margin-left: 30px;
+    }
+    .highlight {
+        font-size: 14px;
     }
 }
