--- a/Making.css
+++ b/Making.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
+    font-size: 1.5rem;
     padding-bottom : 20px;
 }
 
@@ -31,6 +32,7 @@ a:active {
 }
 
 #title {
+    font-size: 2rem;
     text-align: left;
     box-sizing: border-box;
     padding-bottom: 5px;
@@ -62,18 +64,10 @@ ul {
 }
 
 /* 화면 너비 0 ~ 2560px */
-@media (max-width:2570px) {
+@media (max-width:2560px) {
     .main {
         display: flex;
         padding-top:100px;
-    }
-
-    #header_container {
-        font-size: 1.5rem;
-    }
-
-    #title {
-        font-size: 2rem;
     }
 
     p {
@@ -87,7 +81,7 @@ ul {
     .voca_container input {
         font-size:25px;
         margin-bottom : 30px;
-        height: 2em;
+        height: 2.5em;
     }
 
     .voca_field input {
@@ -133,14 +127,6 @@ ul {
         padding-top:50px;
     }
 
-    #header_container {
-        font-size: 1.5rem;
-    }
-
-    #title {
-        font-size: 2rem;
-    }
-
     p {
         font-size : 25px;
     }
@@ -152,15 +138,15 @@ ul {
     .voca_container input {
         font-size:25px;
         margin-bottom : 30px;
-        height: 2em;
+        height: 2.5em;
     }
 
     .voca_field input {
-        width : 400px;
+        width : 430px;
     }
 
     .mean_field input {
-        width : 700px;
+        width : 730px;
     }
 
     #save_btn {
@@ -172,7 +158,7 @@ ul {
 
     .addMinus{
         bottom: 45px;
-        left: 560px;
+        left: 600px;
     }
 
     .add {
@@ -197,98 +183,83 @@ ul {
         padding-top:50px;
     }
 
-    #header_container {
-        font-size: 1rem;
-    }
-
-    #title {
-        font-size: 1.5rem;
-    }
-
     p {
-        font-size : 20px;
+        font-size : 30px;
     }
 
     span {
-        font-size : 18px;
+        font-size : 20px;
     }
 
     .voca_container input {
         font-size:25px;
         margin-bottom : 30px;
-        height: 2em;
+        height: 2.5em;
     }
 
     .voca_field input {
-        width : 230px;
+        width : 300px;
     }
 
     .mean_field input {
-        width : 400px;
+        width : 500px;
     }
 
     #save_btn {
         bottom : 30px;
-        width: 160px;
-        height: 45px;
-        font-size: 20px;
+        width: 250px;
+        height: 60px;
+        font-size: 25px;
     }
 
     .addMinus{
-        bottom: 43px;
-        left: 330px;
+        bottom: 45px;
+        left: 400px;
     }
 
     .add {
-        font-size:20px;
-        width:25px;
-	    height:25px;
-        line-height:25px;
+        font-size:25px;
+        width:30px;
+	    height:30px;
+        line-height:30px;
     }
 
     .minus {
-        font-size:20px;
-        width:25px;
-	    height:25px;
-        line-height:25px;
+        font-size:25px;
+        width:30px;
+	    height:30px;
+        line-height:30px;
     }
 }
 
 /* 화면 너비 0 ~ 768px */
-@media (max-width : 780px) { 
+@media (max-width : 768px) { 
     .main {
         display: flex;
         padding-top:50px;
     }
 
-    #header_container {
-        font-size: 1rem;
-    }
-
-    #title {
-        font-size: 1.3rem;
-    }
-
     p {
-        font-size : 18px;
+        font-size : 15px;
     }
 
     span {
-        font-size : 15px;
+        padding-right:3px;
+        font-size : 5px;
     }
 
     .voca_container input {
         font-size:20px;
         margin-bottom : 30px;
-        height: 2em;
+        height: 1.5em;
     }
 
     .voca_field input {
-        width : 140px;
+        width : 200px;
     }
 
     .mean_field input {
-        width : 220px;
+        width : 300px;
     }
 
     #save_btn {
@@ -300,7 +271,7 @@ ul {
 
     .addMinus{
         bottom: 40px;
-        left: 200px;
+        left: 260px;
     }
 
     .add {
@@ -340,7 +311,7 @@ span {
 }
 
 #save_btn {
-    margin-top:20px;
+    margin-top:30px;
     position:relative;
     background-color: #fcd121;
     color: rgb(255, 255, 255);
@@ -383,4 +354,3 @@ span {
     background-color: rgb(255, 255, 255);
     cursor: pointer;
 }
-
